# libosmscout

./: build.sh  build.txt
osmwami/: CMakeLists.txt  osmwami.pro  res.qrc
osmwami/conf/WAMISoft/: wami.conf
osmwami/qml/: CategoryModel.qml  PlacesModel.qml  main.qml
osmwami/src/: DBThread.cpp  DBThread.h  MainWindow.cpp  MapWidget.cpp  MapWidget.h  OSMScout.cpp  OwnPOI.cpp  OwnPOI.h  POICategoryModel.cpp  POICategoryModel.h  POILoader.cpp  POILoader.h  RoutingModel.cpp  RoutingModel.h  Settings.h  ownpoi.cpp  ownpoi.h
